--- a/alpha/web/lib/css/kmc5.css
+++ b/alpha/web/lib/css/kmc5.css
@@ -324,16 +324,12 @@ fieldset{ border:0 none; position:relative; }
 #previewModal .checkbox input { margin-right: 5px; }
 #previewModal .qr-placeholder { width: 80px; height: 80px; border: 1px solid #999; background: #efefef; }
 #previewModal .qr-text { margin-top: 43%; margin-left: 14%;font-size: 11px; }
-#previewModal .copy-code { font-size: 11px; }
+#previewModal .copy-code { font-size: 11px; float: right}
 #previewModal .modal-body { max-height: 100%; }
 #previewModal .urlbox { text-overflow: ellipsis; overflow: hidden; color: #009ACC; }
-#previewModal #embedCode { width: 200px; }
+#previewModal #embedCode { width: 100%; height:200px}
 #previewIframe { height: 100%; }
 #previewIframe iframe { width: 100%; height: 100%; min-height: 500px; border: 0; }
-
-@media all and (min-width: 1151px) {
-	#previewModal #embedCode { width: 260px; }
-}
 
 .lt-ie9 .qr-block { display: none; }
 .lt-ie8 #previewModal .options { max-width: 300px; }
@@ -372,6 +368,7 @@ fieldset{ border:0 none; position:relative; }
 	display: inline-block;
 	margin-bottom: 10px;
 	font-size: 0;
+	width:100%;
 	white-space: nowrap;
 	vertical-align: middle;
 }
