--- a/alpha/web/lib/css/kmc5.css
+++ b/alpha/web/lib/css/kmc5.css
@@ -324,7 +324,8 @@ div.description ul button { padding: 0 5px;} /* vertical-align:1px; */
 #previewModal .checkbox input { margin-right: 5px; }
 #previewModal .qr-placeholder { width: 80px; height: 80px; border: 1px solid #999; background: #efefef; }
 #previewModal .qr-text { margin-top: 43%; margin-left: 14%;font-size: 11px; }
-#previewModal .copy-code { font-size: 11px; float: right}
+#previewModal .copy-code { font-size: 11px}
+#previewModal .pullright { float: right}
 #previewModal .modal-body { max-height: 100%; }
 #previewModal .urlbox { text-overflow: ellipsis; overflow: hidden; color: #009ACC; }
 #previewModal #embedCode { width: 100%; height:200px}
