Auditing partner status change events + reason PLAT-678 #time 1d

--- a/admin_console/views/scripts/partner/configure.phtml
+++ b/admin_console/views/scripts/partner/configure.phtml
@@ -288,7 +288,7 @@ function openViewHistory(partner_id){
 		modal: true,
 		resizable: false,
 		width: 750,
-		title: '<?php echo $this->translate('Trail Account Extension History'); ?>',
+		title: '<?php echo $this->translate('Trial Account Events History'); ?>',
 		height: 400,
 		buttons: {			
 			'<?php echo $this->translate('OK'); ?>': function() {
