--- a/alpha/web/lib/css/kmc5.css
+++ b/alpha/web/lib/css/kmc5.css
@@ -328,7 +328,7 @@ div.description ul button { padding: 0 5px;} /* vertical-align:1px; */
 #previewModal .pullright { float: right}
 #previewModal .modal-body { max-height: 100%; }
 #previewModal .urlbox { text-overflow: ellipsis; overflow: hidden; color: #009ACC; }
-#previewModal #embedCode { width: 100%; height:200px}
+#previewModal #embedCode { width: 100%; height:200px; white-space: normal!important;}
 #previewIframe { height: 100%; }
 #previewIframe iframe { width: 100%; height: 100%; min-height: 500px; border: 0; }
 
