Setting a default empty reason string on prompt() (otherwise it's set to 'undefined' in I.E.) PLAT-678 #time 5m

--- a/admin_console/views/scripts/partner/list.phtml
+++ b/admin_console/views/scripts/partner/list.phtml
@@ -337,7 +337,7 @@ function remove(partnerId)
 
 function changeStatusPopup( userPrompt, partnerId, status, successCallback )
 {
-	var reason = prompt( userPrompt );
+	var reason = prompt( userPrompt, "" );
 	if (reason)
 	{
 		changeStatus( partnerId, status, reason, successCallback );
