--- a/admin_console/views/scripts/widget/external-edit.phtml
+++ b/admin_console/views/scripts/widget/external-edit.phtml
@@ -135,7 +135,7 @@ jQuery(function() {
 
 	updateSwfUrl();
 
-	jQuery('#conf_file, #conf_file_features').parent().find('.open-editor').click(openEditor);
-	jQuery('#conf_file, #conf_file_features').parent().find('.open-visual-editor').click(openVisualEditor);
+	jQuery('#conf_file, #conf_file_features, #config').parent().find('.open-editor').click(openEditor);
+    jQuery('#conf_file, #conf_file_features, #config').parent().find('.open-visual-editor').click(openVisualEditor);
 });
 </script>
