--- a/alpha/web/lib/css/kmc5.css
+++ b/alpha/web/lib/css/kmc5.css
@@ -94,7 +94,7 @@ form div.buttons button:hover{ color:#cdcdd0; }
 #main .corner.right { background-position:0 -58px; left:auto; right:0; }
 #main .bcorner { position:absolute; width:5px; height:5px; z-index:2; bottom:0; left:0; background:url(../images/kmc/bottom_corners.gif) -5px 0 repeat-x; }
 #main .bcorner.right { background-position:0 0; left:auto; right:0; }
-#main .flash_wrap { margin:0px; background-color:#f4f4f5; }
+#main .flash_wrap { margin:0px; background-color:#f4f4f5; overflow: hidden}
 #main .flash_wrap object { min-height: 100%; }
 
 * html #main .corner{ display:none; }
@@ -779,3 +779,10 @@ select, input[type="file"] {
 	height: 30px;
 	line-height: 30px;
 }
+.langIcon {float: right; padding-top: 6px; padding-left: 6px; cursor: pointer;}
+.langMenuDropdown {width: 120px; height: 140px; background-color: white; border: 1px solid black; position: absolute; z-index: 1001; right: 0; display: none;}
+.langMenuIframe {width: 122px; height:142px; z-index: 1000; position: absolute; right: 0;  display: none; border: none;}
+.langMenuItem {width: 100%; height: 24px; background-color: #fafafa; cursor: pointer; padding-top: 4px}
+.langMenuItem:hover {width: 100%; height: 24px; background-color: #cacaca;}
+.langMenuIcon {padding-left: 5px; padding-right: 5px;}
+.langMenuLabel {font-family: Arial; font-size: 12px;}
