--- a/admin_console/web/css/global.css
+++ b/admin_console/web/css/global.css
@@ -2206,6 +2206,16 @@ form#frmCreateDropFolder dd,form#frmCreateDropFolder dt {
 	float: left;
 }
 
+#partner-configure-dialog #fieldset-publisherSpecificDeliverySettings  .hint
+{
+    color: #999999;
+    font-size: 10px;
+    margin: 0;
+    padding: 0 0 0 17px;
+    border: none;
+    background-color: transparent;
+}
+
 #partner-configure-dialog #extended_free_trail_expiry_reason-element .errors
 	{
 	width: 240px;
