validate id on API call level+more small changes   PLAT-975 #time 1.5d

--- a/admin_console/views/scripts/partner/list.phtml
+++ b/admin_console/views/scripts/partner/list.phtml
@@ -279,6 +279,15 @@ function changeEmptyStringsTo0(){
 		}
 	});
 
+	$("#fieldset-thumbnailConfiguration input").each(function(inx, value){
+		var $input = $(value);
+		if( $input.attr('type') == 'text') {
+				if ($input.val() == '') {
+						$input.val("0");
+			}
+		}
+	});
+	
 	$("#extended_free_trail").each(function(inx, value){
 		var $input = $(value);
 
