--- a/admin_console/web/css/global.css
+++ b/admin_console/web/css/global.css
@@ -2216,6 +2216,18 @@ form#frmCreateDropFolder dd,form#frmCreateDropFolder dt {
     background-color: transparent;
 }
 
+#partner-configure-dialog #fieldset-thumbnailConfiguration .partner_configuration_checkbox_field
+        {
+        width: 70px;
+        float: left;
+}
+
+#partner-configure-dialog #fieldset-thumbnailConfiguration  dt
+        {
+        width: 300px;
+        float: left;
+}
+
 #partner-configure-dialog #extended_free_trail_expiry_reason-element .errors
 	{
 	width: 240px;
