Updated UI to have a table of delivery profiles.

--- a/admin_console/views/scripts/partner/edit-delivery-profile.phtml
+++ b/admin_console/views/scripts/partner/edit-delivery-profile.phtml
@@ -23,7 +23,7 @@
 			</select>
 		</td>
 		<td align="center">
-			<input type="button" id="unselect" value="&lt; unselect" /></br> 
+			<input type="button" id="unselect" value="&lt; unselect" /><br> 
 			<input type="button" id="select"   value="select    &gt;" />
 		</td>
 		<td align="center">
