--- a/admin_console/views/scripts/partner/configure-storage.phtml
+++ b/admin_console/views/scripts/partner/configure-storage.phtml
@@ -5,8 +5,6 @@
 
 <?php echo $this->form; ?>
 			
-
-
 <script type="text/javascript">
 jQuery('[class=commentForm]').toggle();
 
@@ -43,24 +41,95 @@ jQuery(document).ready(function() {
 		dialogDiv.dialog('close');
 		jQuery('#frmPartnerFilter').submit();
 	<?php endif; ?>
+
+	updatedUI();
 });
 
-jQuery('#delivery_format').change(function() {
-	var dpIdsStr = $("#deliveryProfileIds")[0].value;
-	var dpIds = jQuery.parseJSON(dpIdsStr);
+function addDeliveryProfileFormats() {
 
-	if(this.value in dpIds)
-		$("#deliveryIdsPerFormat")[0].value = dpIds[this.value];
-	else 
-		$("#deliveryIdsPerFormat")[0].value = "Null";
-});
+	currentFormats = getPlaybackProtocols();
+	jQuery('#deliveryFormat').empty();
+	
+	var dpIdsStr = jQuery('#deliveryProfileIds').val();
+	var dpIdsJson = jQuery.parseJSON(dpIdsStr);
 
-function editDeliveryProfile()
+	for(format in dpIdsJson) {
+		if(currentFormats[format])
+			delete currentFormats[format];
+	}
+
+	for(format in currentFormats) {
+		jQuery('#deliveryFormat').append(new Option(currentFormats[format], format));
+	}
+}
+
+function getPlaybackProtocols() {
+	var playbackDict = {};
+	playbackDict["http"] = "HTTP";
+	playbackDict["rtmp"] = "RTMP";
+	playbackDict["sl"] = "SILVER_LIGHT";
+	playbackDict["applehttp"] = "APPLE_HTTP";
+	playbackDict["rtsp"] = "RTSP";
+	playbackDict["hds"] = "HDS";
+	playbackDict["hls"] = "HLS";
+	playbackDict["hdnetworkmanifest"] = "AKAMAI_HDS";
+	playbackDict["hdnetwork"] = "AKAMAI_HD";
+	return playbackDict;
+}
+
+function createDeliveryProfilesTable() 
+{
+	if(jQuery('#deliveryProfilesTable'))
+		jQuery('#deliveryProfilesTable').remove();
+	
+	var dpIdsStr = jQuery('#deliveryProfileIds').val();
+	var dpIdsJson = jQuery.parseJSON(dpIdsStr);
+	var tbl = document.createElement('table');
+
+	createTitles(tbl);
+	for(format in dpIdsJson)
+		addFormatRow(tbl, format, dpIdsJson[format]);
+
+	jQuery('#deliveryProfileIds').after(tbl);
+	$(tbl).attr('id', 'deliveryProfilesTable');
+}
+
+function createTitles(tbl) {
+	var row = document.createElement('tr');	
+	var tdFormat = document.createElement('td');
+	tdFormat.innerHTML = "<b>Format</b>";
+	var tdIds = document.createElement('td');
+	tdIds.innerHTML = "<b>Delivery profiles</b>";
+	var tdEdit = document.createElement('td');
+	var tdRemove = document.createElement('td');
+	$(row).append(tdFormat).append(tdIds).append(tdEdit).append(tdRemove);
+	$(tbl).append(row);
+}
+
+function addFormatRow(tbl, format, deliveryProfileIds) 
+{
+	var row = document.createElement('tr');	
+	var tdFormat = document.createElement('td');
+	tdFormat.innerHTML = format;
+	var tdDPIds = document.createElement('td');
+	tdDPIds.innerHTML = deliveryProfileIds;
+	var tdEdit = document.createElement('td');
+	tdEdit.innerHTML = '<button onclick="editDeliveryProfile(\'' +format+'\',[' + deliveryProfileIds+ ']);">Edit</button>';
+	var tdRemove = document.createElement('td');
+	tdRemove.innerHTML = '<button onclick="removeFormat(\'' +format+'\');">Remove</button>';
+
+	$(row).append(tdFormat).append(tdDPIds).append(tdEdit).append(tdRemove);
+	$(tbl).append(row);
+}
+
+function addDeliveryProfile() {
+	var deliveryFormat = jQuery('#deliveryFormat').val();
+	editDeliveryProfile(deliveryFormat, null);
+}
+
+function editDeliveryProfile(format, currentDps)
 {
 	var storageProfileId = $("#storageId")[0].value;
-	var partnerId = $("#partnerId")[0].value;
-	var currentDps = $("#deliveryIdsPerFormat")[0].value;
-	var format = $("#delivery_format")[0].value;
 
 	var url = '<?php echo $this->url(array('controller' => 'partner', 'action' => 'edit-delivery-profile')); ?>';
 	url += '/currentDeliveryProfiles/' + currentDps + "/";
@@ -76,21 +145,9 @@ function editDeliveryProfile()
 		height: 400,
 		buttons: {			
 			'<?php echo $this->translate('OK'); ?>': function() {
-				okPressed();
+				okPressed(format);
 				jQuery(this).dialog('close').remove();
 			},
-			'<?php echo $this->translate('EMPTY'); ?>': function() {
-				var dpIdsStr = $("#deliveryProfileIds")[0].value;
-				var dpIdsObj = jQuery.parseJSON(dpIdsStr);
-				var format = $("#delivery_format")[0].value;
-
-				delete dpIdsObj[format];
-
-				$("#deliveryProfileIds")[0].value = JSON.stringify(dpIdsObj);
-				$("#deliveryIdsPerFormat")[0].value = "Null";
-				
-				jQuery(this).dialog('close').remove();
-			}
 		},
 		close: function() {
 			$(this).dialog('close').remove();
@@ -101,22 +158,33 @@ function editDeliveryProfile()
 		);
 }
 
-function okPressed() {
-	if(	($("#selectedValues option").length == 1) 
-			&&	($("#selectedValues option")[0].value == "Error")) 
-		return;
+function removeFormat(format) {
+	var dpIdsStr = $("#deliveryProfileIds")[0].value;
+	var dpIdsObj = jQuery.parseJSON(dpIdsStr);
+
+	delete dpIdsObj[format];
+
+	$("#deliveryProfileIds")[0].value = JSON.stringify(dpIdsObj);
+	updatedUI();
+}
+
+function okPressed(format) {
 
 	var selectedValues = [];
-	$("#selectedValues option").each(function() {selectedValues.push(parseInt(this.value))})
+	$("#selectedValues option").each(function() {selectedValues.push(parseInt(this.value));});
 	
 	var dpIdsStr = $("#deliveryProfileIds")[0].value;
 	var dpIdsObj = jQuery.parseJSON(dpIdsStr);
 
-	var format = $("#delivery_format")[0].value;
-
 	dpIdsObj[format] = selectedValues;
 	$("#deliveryProfileIds")[0].value = JSON.stringify(dpIdsObj);
-	$("#deliveryIdsPerFormat")[0].value = selectedValues.join(",");
+
+	updatedUI();
+}
+
+function updatedUI() {
+	createDeliveryProfilesTable();
+	addDeliveryProfileFormats();
 }
 
 </script>
