--- a/admin_console/views/scripts/partner/external-storages.phtml
+++ b/admin_console/views/scripts/partner/external-storages.phtml
@@ -1,4 +1,6 @@
 	
+<?php $this->headScript()->appendFile($this->baseUrl('js/assignDeliveryProfile.js'));?>
+
 <p><?php echo $this->translate('external-storages intro text'); ?></p>
 
 <?php 
