UI Updates. Enables configuring delivery profile

--- a/admin_console/views/scripts/partner/configure-storage.phtml
+++ b/admin_console/views/scripts/partner/configure-storage.phtml
@@ -49,7 +49,7 @@ function assignDeliveryProfile(format, currentDps)
 {
 	var storageProfileId = $("#storageId")[0].value;
 
-	var url = '<?php echo $this->url(array('controller' => 'partner', 'action' => 'assign-delivery-profile')); ?>';
+	var url = '<?php echo $this->url(array('controller' => 'delivery', 'action' => 'assign-delivery-profile')); ?>';
 	url += '/currentDeliveryProfiles/' + currentDps + "/";
 	var dialogDiv = jQuery('<div id="confirmation-div"></div>').appendTo('body');
 	
