0. Removed isDefault from view 1.	Filter the options according to the selected streamer type 2.	Use pageSize = 500 3.	Increase the size of both listboxes

--- a/admin_console/views/scripts/partner/configure-storage.phtml
+++ b/admin_console/views/scripts/partner/configure-storage.phtml
@@ -50,7 +50,7 @@ function assignDeliveryProfile(format, currentDps)
 	var storageProfileId = $("#storageId")[0].value;
 
 	var url = '<?php echo $this->url(array('controller' => 'delivery', 'action' => 'assign-delivery-profile')); ?>';
-	url += '/currentDeliveryProfiles/' + currentDps + "/";
+	url += '/currentDeliveryProfiles/' + currentDps + "/streamerType/" + format;
 	var dialogDiv = jQuery('<div id="confirmation-div"></div>').appendTo('body');
 	
 	dialogDiv.dialog({
