--- a/alpha/web/lib/css/kmc5.css
+++ b/alpha/web/lib/css/kmc5.css
@@ -94,7 +94,7 @@ form div.buttons button:hover{ color:#cdcdd0; }
 #main .corner.right { background-position:0 -58px; left:auto; right:0; }
 #main .bcorner { position:absolute; width:5px; height:5px; z-index:2; bottom:0; left:0; background:url(../images/kmc/bottom_corners.gif) -5px 0 repeat-x; }
 #main .bcorner.right { background-position:0 0; left:auto; right:0; }
-#main .flash_wrap { margin:0px; background-color:#f4f4f5; overflow: hidden}
+#main .flash_wrap { margin:0px; background-color:#f4f4f5; overflow: hidden; height:100%}
 #main .flash_wrap object { min-height: 100%; }
 
 * html #main .corner{ display:none; }
