Add Ks validation on ingested XML via drop folder 1. Add new configuration fields in XML drop folder the enable KS validation. 2. If enabled enforce KS validation in ingestion process.

--- a/plugins/drop_folder/admin/scripts/plugin/drop-folder-configure-action.phtml
+++ b/plugins/drop_folder/admin/scripts/plugin/drop-folder-configure-action.phtml
@@ -46,15 +46,22 @@ function handlerTypeChanged()
 	curValue = jQuery('#frmDropFolderConfigure #fileHandlerType').val();
 	patterns = jQuery('#fileNamePatterns');
 	patternsLbl = jQuery('#fileNamePatterns-label');
+	validateKS = jQuery('#shouldValidateKS');
+	validateKSLbl = jQuery("[for='shouldValidateKS']");
+	
 	if (curValue == <?php echo Kaltura_Client_DropFolder_Enum_DropFolderFileHandlerType::CONTENT; ?>) {
 		jQuery('#frmDropFolderConfigure #frmContentFileHandlerConfig').css("display","inline");
 		patterns.hide();
 		patternsLbl.hide();
+		validateKS.hide();
+		validateKSLbl.hide();
 	}
 	else {
 		jQuery('#frmDropFolderConfigure #frmContentFileHandlerConfig').css("display","none");
 		patterns.show();
 		patternsLbl.show();
+		validateKS.show();
+		validateKSLbl.show();
 	}	
 }
 
