Added support in key-pair for SFTP remote storage. #PLAT-2189

--- a/admin_console/views/scripts/partner/configure-storage.phtml
+++ b/admin_console/views/scripts/partner/configure-storage.phtml
@@ -11,6 +11,8 @@ jQuery('[class=commentForm]').toggle();
 jQuery(document).ready(function() {
 	// Get selected storage protocol
 	var protocolUpdateView = function( protocol ) {
+
+		setKeyPairSettings(false);
 		
 		switch ( protocol )
 		{
@@ -26,6 +28,9 @@ jQuery(document).ready(function() {
 			jQuery('#filesPermissionInS3-label').css('visibility', 'hidden');
 			jQuery('#filesPermissionInS3').css('visibility', 'hidden');			
 			break;
+		case "<?php echo Kaltura_Client_Enum_StorageProfileProtocol::SFTP?>":
+			setKeyPairSettings(true);
+			// No break, the rest of the settings should be as default
 		default:
 			jQuery('#filesPermissionInS3').css('visibility', 'hidden');
 			jQuery('#filesPermissionInS3-label').css('visibility', 'hidden');
@@ -44,6 +49,20 @@ jQuery(document).ready(function() {
 
 	updatedUI();
 });
+
+function setKeyPairSettings(enable) {
+	var val = enable ? 'visible' : 'hidden';
+	jQuery('#sshPublicKey').css('visibility', val);
+	jQuery('#sshPublicKey-label').css('visibility', val);
+	jQuery('#publicKey').css('visibility', val);
+	jQuery('#publicKey-label').css('visibility', val);
+	jQuery('#sshPrivateKey').css('visibility', val);
+	jQuery('#sshPrivateKey-label').css('visibility', val);
+	jQuery('#privateKey').css('visibility', val);
+	jQuery('#privateKey-label').css('visibility', val);
+	jQuery('#passPhrase').css('visibility', val);
+	jQuery('#passPhrase-label').css('visibility', val);
+}
 
 function assignDeliveryProfile(format, currentDps)
 {
